<resources>
    <string name="app_name">BoxBox</string>
    <string name="season">Temporada</string>
    <string name="home">Inicio</string>
    <string name="chats">Chats</string>

    <!-- Home -->
    <string name="conversations">Hilos</string>
    <string name="posts">Posts</string>

    <!-- Season -->
    <string name="drivers">Pilotos</string>
    <string name="teams">Constructores</string>
    <string name="calendar">Calendario</string>

    <!-- Chats -->
    <string name="no_chats">No tienes chats</string>
    <string name="login_to_see_chats_text">Para ver tus chats debes iniciar sesión</string>

    <!-- Login & Register-->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="access">Acceso</string>
    <string name="login">Iniciar sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="already_have_account_prefix">¿Ya tiene una cuenta?</string>
    <string name="login_clickable_text">Inicie sesión</string>
    <string name="register_title">Registro</string>
    <string name="register">Regístrate</string>
    <string name="no_account_register_prefix">¿No tienes cuenta?</string>

    <!-- Drivers -->
    <string name="driver_image_description">Foto del piloto</string>
    <string name="flag_description">Bandera</string>

    <!-- Teams -->
    <string name="logo_description">Logo del equipo</string>

    <!-- Races -->
    <string name="race_name">GP de %1s</string>
    <string name="race_image_description">Circuito</string>
    <string name="next_race">Siguiente carrera</string>
    <string name="gp_winner">Ganador del GP</string>

    <!-- Profile  -->
    <string name="posts_number">Publicaciones</string>
    <string name="registered_on">Fecha de registro</string>
    <string name="last_access">Último acceso</string>
    <string name="user_picture">Avatar del usuario</string>
    <string name="rol">Rol</string>
    <string name="favorite_team">Equipo favorito</string>
    <string name="favorite_driver">Piloto favorito</string>
    <string name="save">Guardar</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="biography">Añade una pequeña biografía</string>


    <string name="profile">Mi perfil</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Cerrar sesión</string>

    <string name="send_message">Enviar mensaje</string>
    <string name="report">Reportar</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Validations -->
    <string name="required_field">Este campo es obligatorio</string>
    <string name="email_no_valid_format">El correo electrónico no tiene un formato válido</string>
    <string name="password_characters_required">La contraseña debe tener al menos 12 caracteres</string>
    <string name="password_minus_required">La contraseña debe contener al menos una letra mayúscula</string>
    <string name="password_mayus_required">La contraseña debe contener al menos una letra minúscula</string>
    <string name="password_number_required">La contraseña debe contener al menos un número</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>


    <string name="close_dialog">Cerrar diálogo</string>


    <!-- Dates -->
    <plurals name="minutes_ago">
        <item quantity="one">hace %d minuto</item>
        <item quantity="other">hace %d minutos</item>
    </plurals>

    <plurals name="hours_ago">
        <item quantity="one">hace %d hora</item>
        <item quantity="other">hace %d horas</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">hace %d día</item>
        <item quantity="other">hace %d días</item>
    </plurals>

    <plurals name="months_ago">
        <item quantity="one">hace %d mes</item>
        <item quantity="other">hace %d meses</item>
    </plurals>

    <plurals name="years_ago">
        <item quantity="one">hace %d año</item>
        <item quantity="other">hace %d años</item>
    </plurals>

    <string name="just_now">Justo ahora</string>


    <string name="write_your_post">Escribe tu publicación…</string>
    <string name="toolbar_logo">toolbar_logo</string>

    <string name="username_format">\@%1$s</string>

</resources>