<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="?attr/colorSurface"
    app:cardElevation="8dp"
    app:strokeColor="?attr/colorPrimary"
    app:strokeWidth="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/register_title"
            android:textColor="?attr/colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:hintTextColor="@color/onSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:hintTextColor="@color/onSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:hintTextColor="@color/onSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/box_stroke_selector"
            app:hintTextAppearance="@style/MyHintTextStyle"
            app:hintTextColor="@color/onSurface">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOnSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            android:textColor="?attr/colorOnSecondary"
            app:backgroundTint="?attr/colorSecondary"
            app:strokeColor="?attr/colorOnSecondary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAlreadyHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/already_have_account_prefix"
                android:textColor="?attr/colorOnBackground"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLoginClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_clickable_text"
                android:textColor="@color/secondary"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
